# mrdm-cli

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  cdx.sh  mrdm.json
.mrdm/: data.json
src/: main.rs
src/config/: mrdm.json
