[package]
name = "mrdm"
version = "0.1.0"
authors = ["Quatton (atomicatives@gmail.com)"]
license = "MIT OR Apache-2.0"
description = "A //TODO list utility for in-code project management"
readme = "README.md"
homepage = "https://github.com/Quatton/mrdm-cli"
repository = "https://github.com/Quatton/mrdm-cli"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.3"
glob = "0.3.1"
log = "0.4.21"
regex = "1.10.4"
serde = "1.0.199"
serde_derive = "1.0.199"
